--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 dynamic = ["version"]
+readme = "README.rst"
 
 [project.optional-dependencies]
 dev = [
