--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ readme = "README.rst"
 
 [project.optional-dependencies]
 dev = [
-  "black",
   "ruff",
   "mypy",
   "build",
@@ -32,12 +31,19 @@ github = "https://github.com/lukasturcani/moldoc"
 fallback_version = "0.0.0"
 write_to = "src/moldoc/version.py"
 
-[tool.black]
-line-length = 79
-
 [tool.ruff]
 line-length = 79
-extend-select = ["I"]
+exclude = ["src/moldoc/version.py"]
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["ANN101", "ANN401", "COM812", "ISC001"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/source/conf.py" = ["D100", "INP001"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.mypy]
 show_error_codes = true
