--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -9,16 +9,15 @@ jobs:
     env:
       VERSION: ${{ github.ref_name }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
           cache: "pip"
-      - run: "pip install -e '.[dev]'"
+      - run: pip install -e '.[dev]'
       - run: python -m build
-      - name: Publish
-        run:
+      - run:
           twine upload
-          -u ${{ secrets.PYPI_USERNAME }}
-          -p ${{ secrets.PYPI_PASSWORD }}
+          -u __token__
+          -p ${{ secrets.PYPI_API_TOKEN }}
           dist/*
