--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 requires-python = ">=3.10"
 dynamic = ["version"]
 readme = "README.rst"
+description = "Make better chemistry documentation!"
 
 [project.optional-dependencies]
 dev = [
