--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
-readme = "README.rst"
+readme = "README.md"
 description = "Make better chemistry documentation!"
 
 [dependency-groups]
