--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,12 @@
 version: 2
 
 build:
-    os: ubuntu-22.04
-    tools:
-      python: "3.12"
-
-sphinx:
-    configuration: docs/source/conf.py
-
-python:
-    install:
-        - method: pip
-          path: .
-          extra_requirements:
-            - dev
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.12"
+  commands:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv sync --extra dev --frozen
+    - uv run -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs/source $READTHEDOCS_OUTPUT/html
